[package]
name = "subnetter"
version = "0.1.0"
authors = ["Gian12315 <giancarlo.cytro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
csv = "1.1.3"
serde = {version = "1.0.111", features=["derive"]}
